# epsilon

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  DEPS.txt  MANIFEST.in  NEWS.rst  NEWS.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
Epsilon/: MANIFEST.in  NEWS.txt  README  setup.py  tox.ini
Epsilon/doc/: index.xhtml
Epsilon/epsilon/: __init__.py  _version.py  ampauth.py  asplode.py  caseless.py  descriptor.py  extime.py  hotfix.py  iepsilon.py  modal.py  release.py  setuphelper.py  structlike.py  versions.py
Epsilon/epsilon/scripts/: benchmark.py  certcreate.py
Epsilon/epsilon/test/: test_ampauth.py  test_benchmark.py  test_caseless.py  test_cooperator.py  test_descriptor.py  test_extime.py  test_release.py  test_remember.py  test_setuphelper.py  test_sslverify.py  test_structlike.py  test_version.py  (+1 more)
doc/: amp-auth.xhtml
epsilon/: __init__.py  _version.py  ampauth.py  amprouter.py  caseless.py  compat.py  cooperator.py  descriptor.py  extime.py  hotfix.py  iepsilon.py  juice.py  liner.py  modal.py  process.py  remember.py  setuphelper.py  structlike.py  unrepr.py  versions.py  view.py
epsilon/hotfixes/: filepath_copyTo.py  trial_assertwarns.py
epsilon/scripts/: benchmark.py  certcreate.py
epsilon/test/: iosim.py  mantissa-structure.py  test_ampauth.py  test_amprouter.py  test_benchmark.py  test_caseless.py  test_descriptor.py  test_expose.py  test_extime.py  test_juice.py  test_modes.py  test_setuphelper.py  test_structlike.py  test_unrepr.py  test_versions.py  utils.py
(+3 files in other folders)
