[metadata]
name = epsilon
description = A set of utility modules used by Divmod projects
long_description = file:README.rst
license_file = LICENSE
url = https://github.com/twisted/epsilon
classifiers =
        Development Status :: 5 - Production/Stable
        Framework :: Twisted
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Topic :: Internet
        Topic :: Security
        Topic :: Utilities

[options]
packages =
        epsilon
        epsilon.hotfixes
        epsilon.scripts
        epsilon.test
setup_requires =
        setuptools_scm >= 3.4
install_requires =
        six >= 1.12.0
        zope.interface
        twisted[tls] >= 13.2.0
scripts =
        bin/benchmark
        bin/certcreate

[bdist_wheel]
universal=1
